# chew

./: CHANGELOG.md  FUTURE.md  Makefile  pyproject.toml
chew/: branch.py  combine.py  error.py  generic.py  literal.py  primitive.py  repeat.py  sequence.py  string.py  types.py
tests/: __init__.py  test_branch.py  test_combine.py  test_error.py  test_generic.py  test_literal.py  test_primitive.py  test_repeat.py  test_sequence.py  test_string.py
