[tool.poetry]
name = "chew"
version = "1.0.0"
description = "Bare-Bones parser combinator library"
authors = ["Mickey Polito <me@displeased.site>"]
license = "MIT"
readme = "README.md"
include = ["chew/py.typed"]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"
pylint = "^2.17.5"
python-semantic-release = "^8.0.8"

[tool.semantic_release]
version_variable = "pyproject.toml:version"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
