[tool.poetry]
name = "chew"
version = "3.1.0"
description = "Bare-Bones parser combinator library"
authors = ["Mickey Polito <me@displeased.site>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "chew"},
    {include = "chew/py.typed"}
]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
black = "^23.9.1"
pylint = "^2.17.5"
python-semantic-release = "^8.0.8"
coverage = {extras = ["toml"], version = "^7.3.1"}

[tool.semantic_release]
version_toml = ["pyproject.toml:tool.poetry.version"]
commit_message = "chore: v{version} release"

[tool.coverage.run]
omit = ["tests/*.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
